# ot-harjoitustyo

./: .README.md.swp  .coveragerc  .gitignore  .pylintrc  README.md  gamelogic.py  pyproject.toml  tasks.py  vaatimusmaarittely.md
Dokumentaatio/: Kayttoohje.md  arkkitehtuuri.md  changelog.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
data/: colors.ini
laskarit/viikko1/: .komentorivi.txt.swp  gitlog.txt
laskarit/viikko3/: monopoli.md
src/: game.py  gamelogic.py  index.py  logictests.py
src/Game/: game.py
src/UI/: UI.py
src/file_management/: file_manager.py
src/game/: game.py  game_main.py
src/logic/: file_manager.py  game.py  gamelogic.py
src/tests/: logictest.py  logictests.py
tests/: logictests.py
