[tool.poetry]
name = "2048 dependencies"
version = "0.1.0"
description = ""
authors = ["Juska <juseljus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.15.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
